# linkedin-notes

./: .gitignore  README.md  run.sh
chrome-extension/: icon_attribution.txt  main.html  main.js  manifest.json
storage-backend/: pyproject.toml
storage-backend/linkedin_notes_storage/: database.py  main.py  setup.py
storage-backend/linkedin_notes_storage/templates/: com.jayqi.linkedin_notes_storage.json.jinja
storage-backend/tests/: test_database.py
storage-service/: linkedin_notes_storage.py  pyproject.toml
storage-service/linkedin_notes_storage/: __main__.py  database.py  host.py  main.py  register.py  setup.py
storage-service/linkedin_notes_storage/templates/: run.sh.jinja
